# src/api/wbs/wbs.ctrl.js
@@ -10,10 +10,10 @@ const CreateIssueDto = require("./dto/issue.create.dto");
 router.get('/project/wbs/template', jwt.authenticateToken, async (req, res) => {
     try {
         const template = await wbsService.getWbsTemplate();
-        return res.status(200).send(template);
+        return res.status(200).json(template);
     } catch (error) {
         logger.error('WBS 템플릿 조회 중 오류 발생: ', error);
-        return res.status(400).send('WBS 템플릿 조회 중 오류 발생: ' + error.message);
+        return res.status(400).json('WBS 템플릿 조회 중 오류 발생: ' + error.message);
     }
 });
 
@@ -23,12 +23,12 @@ router.get('/project/wbs/create/:pjtSn', jwt.authenticateToken, async (req, res)
     const pjtSn = req.params.pjtSn;
     try{
         const data = await wbsService.createWbsInfo(userSn, pjtSn);
-        if(data.message){ return res.status(400).send(data.message)}
+        if(data.message){ return res.status(400).json(data.message)}
         else if (data != null){ return res.status(200).json(data); }
-        else{ return res.status(400).send('조회 실패'); }
+        else{ return res.status(400).json('조회 실패'); }
     }
     catch (e){
-        return res.status(403).send(e.message);
+        return res.status(403).json(e.message);
     }
 });
 
@@ -45,10 +45,10 @@ router.post('/project/wbs/create/:pjtSn', jwt.authenticateToken, async (req, res
     console.log(pjtData)
     try{
         await wbsService.createWbs(userSn, pjtSn, pjtData);
-        return res.status(200).send('프로젝트 WBS 생성 성공');
+        return res.status(200).json('프로젝트 WBS 생성 성공');
     }
     catch (e){
-        return res.status(400).send('프로젝트 WBS 생성 실패 error = ' + e.message);
+        return res.status(400).json('프로젝트 WBS 생성 실패 error = ' + e.message);
     }
 });
 
@@ -61,13 +61,13 @@ router.post('/project/wbs/edit/:pjtSn', jwt.authenticateToken, async (req, res) 
     try {
         const result = await wbsService.editWbs(userSn, pjtSn, data);
         if (result) {
-            if(result.message){ res.status(400).send(result.message); }
-            else{ res.status(200).send('WBS 수정 완료.'); }
+            if(result.message){ res.status(400).json(result.message); }
+            else{ res.status(200).json('WBS 수정 완료.'); }
         } else {
-            res.status(400).send('WBS 수정 실패.');
+            res.status(400).json('WBS 수정 실패.');
         }
     } catch (e) {
-        return res.status(400).send('WBS 수정 중 오류 발생 error: ' + e.message);
+        return res.status(400).json('WBS 수정 중 오류 발생 error: ' + e.message);
     }
 });
 
@@ -76,34 +76,37 @@ router.get('/project/wbs/:pjtSn', jwt.authenticateToken, async (req, res)=> {
         const userSn = req.userSn.USER_SN;
         const pjtSn = req.params.pjtSn;
         const data = await wbsService.getWbs(userSn, pjtSn);
-        if(data.message){ return res.status(400).send(data.message)}
+        if(data.message){ return res.status(400).json(data.message)}
         else if(data != null){ return res.status(200).json(data); }
-        else { return res.status(400).send('조회되는 WBS가 없습니다.'); }
+        else { return res.status(400).json('조회되는 WBS가 없습니다.'); }
     } catch (error){
-        return res.status(400).send(`WBS 조회 중 에러 발생 :  ${error.message}`);
+        return res.status(400).json(`WBS 조회 중 에러 발생 :  ${error.message}`);
     }
 })
 
 // 이슈생성
 router.post('/project/wbs/:pjtSn/:ticketSn', jwt.authenticateToken, async (req, res) => {
-    const issueDto = new CreateIssueDto({
-        pjtSn: req.params.pjtSn,
-        userSn: req.userSn.USER_SN,
-        ticketSn: req.params.ticketSn,
-        title: req.body.title,
-        periority: req.body.periority,
-        contents: req.body.contents,
-        mentions: req.body.mentions,
-        status: 'ISSUE_OPEN'
-    })
-    issueDto.validate();
-
     try {
+        const issueDto = new CreateIssueDto({
+            pjtSn: req.params.pjtSn,
+            userSn: req.userSn.USER_SN,
+            ticketSn: req.params.ticketSn,
+            issueNm: req.body.ISSUE_NM,
+            priority: req.body.PRIORITY,
+            content: req.body.CONTENT,
+            mentions: req.body.MENTIONS,
+            status: 'ISSUE_OPN'
+        })
+        console.log(req.params)
+        issueDto.validate();
         const data = await wbsService.createIssue(issueDto);
-        if(data.message){ return res.status(400).send(data.message)}
-        return res.status(400).send('조회되는 WBS가 없습니다.');
+        if(data.message){
+            return res.status(400).json(data)
+        }
+        return res.status(200).json('wbs 티켓 이슈 생성 성공.');
     } catch (error){
-
+        logger.error(error)
+        return res.status(400).json(`wbs 티켓 이슈 생성 중 오류 발생 :  ${error.message}`);
     }
 })
 
